moved getWindowedIndHet() to SNPlots.jl

--- a/GreenishWarblerGenomics2023.qmd
+++ b/GreenishWarblerGenomics2023.qmd
@@ -1139,6 +1139,20 @@ plotGenomeFst(scaffolds_to_plot,
 
 ```{julia}
 
+# Moved function below to SNPlots:
+#= """
+    getWindowedIndHet(genotypes, pos, windowSize)
+
+Calculate windowed heterozygosity for each individual, across a genomic region.
+
+​# Arguments
+- `genotypes`: The genotype matrix, where rows are individuals and columns are loci, with genotype codes 0,1,2 meaning homozygous reference, heterozygote, homozygous alternate, and missing genotypes can be either -1 or `missing`.
+- `pos`: A matrix containing genomic location of each locus; must have a `position` column (numerical position on scaffold). 
+- `windowSize`: An integer indicating the number of loci to include in each mean.
+
+# Notes
+Returns a tuple containing 1) a vector of windowed mean positions, and 2) a matrix of windowed heterozgyosity values (rows are individuals and columns are loci). 
+"""
 function getWindowedIndHet(genotypes, pos, windowSize)
     rollingMeanPos = getRollingMean(pos.position, windowSize) # get per-window mean SNP position along scaffold
     # convert both homozygotes to value zero, leaving heterozgyotes value one;
@@ -1151,14 +1165,15 @@ function getWindowedIndHet(genotypes, pos, windowSize)
         rollingMeanHet[i,:] = getRollingMean(heterozygotes[i,:], windowSize)
     end
     return rollingMeanPos, rollingMeanHet
-end
+end =#
 
 chr = "gw26"
 windowSize = 500
 loci_selection = (pos_SNP_filtered.chrom .== chr)
 pos_region = pos_SNP_filtered[loci_selection, :]
-genotypes_region = genosOnly_included[:, loci_selection]
-#genotypes_region = genosOnly_with_missing[:, loci_selection]
+#genotypes_region = genosOnly_included[:, loci_selection]
+genotypes_region = genosOnly_with_missing[:, loci_selection]
+
 
 # temp defs for stepping into function
 # genotypes = genotypes_region
